# .daybegin

./: .gitignore  README.md  config.toml  daybegin.sh  setup_daybegin.sh
daybegin/: Cargo.toml
daybegin/scripts/: run_daybegin.sh
daybegin/src/: application.rs  config.rs  default_config.toml  git.rs  main.rs  shell.rs
